syntax = "proto3";

package agent.v1;

import "agent/v1/agent.proto";

message GetAgentsRequest {}

message GetAgentsResponse {
  repeated Agent agents = 1;
}
